started updating demo notebook

--- a/demo_halss.ipynb
+++ b/demo_halss.ipynb
@@ -9,82 +9,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from distutils.command.build import build\n",
-    "from multiprocessing.spawn import old_main_modules\n",
     "import os\n",
-    "\n",
-    "from pyparsing import col\n",
-    "from HALSS_utils.point_cloud_to_image import collect_lidar, pc_to_surf_normal, downsample_pointcloud, downsample_pointcloud_dict \n",
-    "\n",
-    "from pprint import pprint\n",
-    "from datetime import datetime\n",
-    "from HALSS_utils.network_utils.model_arch import *\n",
-    "from HALSS_utils.network_utils.augment import *\n",
-    "from HALSS_utils.seg_utils import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import open3d as o3d\n",
-    "import skfmm \n",
-    "\n",
-    "# requires Python 3.5.3 :: Anaconda 4.4.0\n",
-    "# pip install opencv-python\n",
-    "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "from datetime import datetime\n",
-    "\n",
-    "from HALSS_utils.halss_utils import *\n"
+    "from HALSS_utils.halss_utils import halss_data_packet, flags_required, parameters, coarse_landing_region_selection, multithread_fine_site_selection"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Initialize Network**"
+    "**Initialize Parameters, Flags, and HALSS Datapacket**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NVIDIA GeForce RTX 3090\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# #####################\n",
-    "# Network Setup\n",
+    "# Flags\n",
     "# #####################\n",
-    "kernel_size = 3\n",
-    "nbase = [3, 32, 64, 128, 256]  # Number of channels per layer\n",
-    "nout = 1  # Number of outputs\n",
+    "flags = flags_required()\n",
+    "flags.flag_plot_origin = False\n",
+    "flags.flag_plot_circles = False # Only relevant for Airsim simulation\n",
+    "flags.flag_show_images = False\n",
+    "flags.flag_save_images = False\n",
+    "flags.flag_timing = False\n",
+    "flags.flag_offset = False\n",
+    "flags.flag_debug = False\n",
     "\n",
-    "net = Unet_drop(nbase, nout, kernel_size)\n",
-    "device = 'cuda:0' if torch.cuda.is_available() else 'cpu'\n",
-    "print(torch.cuda.get_device_name(0))\n",
+    "# #####################\n",
+    "# Initialize Parameters\n",
+    "# #####################\n",
+    "params = parameters()\n",
+    "params.x_cell_size_coarse = 4 # Size of cell in x direction for Coarse Downsampling\n",
+    "params.y_cell_size_coarse = 4 # Size of cell in y direction for Coarse Downsampling\n",
+    "params.x_cell_size_fine = 0.5 # Size of cell in x direction for Fine Downsampling\n",
+    "params.y_cell_size_fine = 0.5 # Size of cell in y direction for Fine Downsampling\n",
+    "params.alpha = 8 # Maximum allowable inclination angle in degrees\n",
+    "params.max_sites = 6 # Maximum number of sites to be considered\n",
+    "params.grid_res = 320 # Resolution of grid to be used for segmentation\n",
+    "params.thresh = 0.1 # Threshold for variance-aware safety map threshold\n",
+    "params.num_mc_samples = 30 # Number of Monte Carlo samples to be used for variance-aware safety map\n",
+    "params.media_save_path = os. getcwd() + '\\\\figures\\\\HALSS\\\\' # Path to save images\n",
     "\n",
-    "net.load_model(os. getcwd() + f\"\\\\HALSS_utils\\\\network_utils\\\\segnet_epoch_1000.pth\")\n",
-    "net.eval()\n",
-    "net.to(device);  # remove semi-colon to see net structure\n"
+    "# #####################\n",
+    "# Initialize HALSS Datapacket\n",
+    "# #####################\n",
+    "halss_global = halss_data_packet()\n",
+    "halss_global.num_circles = params.max_sites\n",
+    "\n",
+    "halss_global.x_cell_size = params.x_cell_size_coarse # Size of cell in x direction for Coarse Downsampling\n",
+    "halss_global.y_cell_size = params.y_cell_size_coarse # Size of cell in y direction for Coarse Downsampling\n"
    ]
   },
   {
@@ -96,17 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = np.load(os. getcwd() + '\\\\demo_pointcloud.npy')\n",
-    "pcd_culled = {}\n",
-    "x_cell_size = .5 # Size of cell in x direction\n",
-    "y_cell_size = .5 # Size of cell in y direction\n",
+    "halss_global.pcd_full = np.load(os. getcwd() + '\\\\demo_pointcloud.npy')\n",
+    "halss_global.pcd_new = halss_global.pcd_full\n",
     "\n",
     "pcd_combined = o3d.geometry.PointCloud()\n",
-    "pcd_combined.points = o3d.utility.Vector3dVector(pcd)\n",
+    "pcd_combined.points = o3d.utility.Vector3dVector(halss_global.pcd_full)\n",
     "#o3d.visualization.draw_plotly([pcd_combined], point_sample_factor=0.2) # Draws in Notebook but looks bad\n",
     "o3d.visualization.draw_geometries([pcd_combined]) # Draws in separate window but looks good"
    ]
@@ -122,14 +106,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "png = pc_to_surf_normal(pcd)\n",
-    "pcd_culled = downsample_pointcloud_dict(pcd_culled, pcd, x_cell_size, y_cell_size) # Bin the point cloud and choose the maximum and minimum z value for each bin\n",
-    "png = mask_surf_norm(pcd_culled, pcd, png, png, x_cell_size, y_cell_size) # Mask out points that are in the convex hull around the point cloud in the XY plane but not in the point cloud\n",
-    "png_scaled = scale_image(png, pcd)"
+    "halss_global.pcd_culled_dict = {}\n",
+    "halss_global.downsample_pointcloud_dict()\n",
+    "halss_global.downsample_pointcloud() # Downsample point cloud data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Coarse Hazard Detection**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--> [HALSS: Using  NVIDIA GeForce RTX 3090  for learning based Coarse HD]\n",
+      "c:\\Users\\Chris\\HALSS\n"
+     ]
+    }
+   ],
+   "source": [
+    "halss_global = coarse_landing_region_selection(halss_global, flags, params)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Fine Landing Hazard Detection**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "halss_global = multithread_fine_site_selection(halss_global, flags, params)"
    ]
   },
   {
